# Support

./: .gitignore  Code.txt  README.md  build.sh  build_exe.bat  entry.py  krep_app.spec  pyproject.toml
.github/workflows/: build.yml  ci.yml
src/krep_app/: __main__.py  calc.py  data.py  server.py
src/krep_app/templates/: index.html
