[project]
name = "krep-app"
version = "0.1.0"
description = "Расчёт параметров крепления горных выработок — браузерное приложение"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1",
    "pandas>=2.2",
    "openpyxl>=3.1",
]

[project.scripts]
krep = "krep_app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/krep_app"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]
